--- a/DemoGit.html
+++ b/DemoGit.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <title>Welcome to Ravolution</title>
 </head>
 <body>
-    <H1>Hello World</H1>
+    <div class="header">
+        <div class="header_menu">
+            <div class="header_item">
+                <ul class="nav_menu">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">BAND</a></li>
+                    <li><a href="#">TOUR</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">MORE</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header_search">
+
+        </div>
+    </div>
+    <div class="wrapper"></div>
+    <div class="footer"></div>
 </body>
 </html>
