update banner and member of band

--- a/DemoGit.html
+++ b/DemoGit.html
@@ -34,7 +34,47 @@
             <span class="ti-search"></span>
         </div>
     </div>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+        <div class="band-banner">
+            <div class="introduce">
+                <h3>Chicago</h3>
+                <p>The atmosphere in New York is lorem ipsum.</p>
+            </div>
+        </div>
+        <div class="band-infor">
+            <div class="container">
+                <h2 class="band-title">THE BAND</h2>
+                <p class="band-sub-title">We love music</p>
+                <p class="band-description">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="band-members">
+                    <div class="band-member">
+                        <p class="name">
+                            Name
+                        </p>
+                        <img src="./image/band_member.jpg" alt="member">
+                    </div>
+                    <div class="band-member">
+                        <p class="name">
+                            Name
+                        </p>
+                        <img src="./image/band_member.jpg" alt="member">
+                    </div>
+                    <div class="band-member">
+                        <p class="name">
+                            Name
+                        </p>
+                        <img src="./image/band_member.jpg" alt="member">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="band-tour">
+            <div class="container">
+                
+            </div>
+        </div>
+        <div class="band-contact"></div>
+    </div>
     <div class="footer"></div>
 </body>
 
