add new tour feature

--- a/DemoGit.html
+++ b/DemoGit.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </div>
-        
+
         <div class="header_search">
             <span class="ti-search"></span>
         </div>
@@ -45,7 +45,14 @@
             <div class="container">
                 <h2 class="band-title">THE BAND</h2>
                 <p class="band-sub-title">We love music</p>
-                <p class="band-description">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="band-description">We have created a fictional band website. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                 <div class="band-members">
                     <div class="band-member">
                         <p class="name">
@@ -70,7 +77,34 @@
         </div>
         <div class="band-tour">
             <div class="container">
-                
+                <div class="tour">
+                    <h2 class="tour-date">TOUR DATES</h2>
+                    <p class="tour-description">Remember to book your tickets!</p>
+                </div>
+                <div class="tour-schedule">
+                    <div class="tour-detail">
+                        <p>September</p>
+                        <span class="sold">Sold Out</span>
+                    </div>
+                    <div class="tour-detail">
+                        <p>October</p>
+                        <span class="sold">Sold Out</span>
+                    </div>
+                    <div class="tour-detail">
+                        <p>November</p>
+                        <span class="quanlity">3</span>
+                    </div>
+                </div>
+                <div class="tour-tickets">
+                    <div class="tour-ticket">
+                        <img src="./image/newyork.jpg" alt="ticket">
+                        <div class="tour-infor">
+                            <p class="ticket-place">New York</p>
+                            <p class="ticket-date">Fri 27 Nov 2016</p>
+                            <p class="ticket-detail">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="band-contact"></div>
